# isometric-game

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  CHAIN-DEVNET.md  CONTENT_ROADMAP.md  CONTRIBUTING.md  Cargo.toml  DEPLOY-RAILWAY.md  DEPLOY-SOLSTEAD.md  Dockerfile  Dockerfile.mapper  FORK.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  clippy.toml  deploy-staging.sh  deploy.sh  force-deploy-site.sh  force-deploy-web-stats.sh  force-deploy.sh  merge_new.py  railway.toml  rust-toolchain.toml  sprite_sheet_batch.py
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/android/: settings.gradle.kts
client/android/app/: build.gradle.kts
client/assets/: animated_sprites.json  sprite_manifest.json
client/assets/ui/: fishing_skill
client/docs/: Fishing System Test Plan.md
client/docs/plans/: 2026-01-24-interior-maps-design.md  2026-01-24-interior-maps-phase1-2.md  2026-01-24-map-editor-portal-tool.md
client/scripts/: generate_sprite_manifest.sh  run-android.sh
client/src/: app.rs  config.rs  desktop.rs  gameplay.rs  lib.rs  main.rs  main_runtime.rs  mobile_scale.rs  net_http.rs  settings.rs  spectator.rs  util.rs
client/src/audio/: mod.rs
client/src/auth/: client.rs  credentials.rs  mod.rs  session_storage.rs  types.rs  wallet_wasm.rs  wasm_client.rs
client/src/game/: chunk.rs  entities.rs  hotkey.rs  item.rs  item_registry.rs  mod.rs  npc.rs  ore_types.rs  pathfinding.rs  prayer.rs  shop.rs  skills.rs  slayer.rs  spectator_camera.rs  spell.rs  state.rs  tilemap.rs  tree_types.rs  tutorial.rs  world_map.rs
client/src/input/: handler.rs  mod.rs  touch.rs
client/src/network/: client.rs  message_handler.rs  messages.rs  mod.rs  protocol.rs  wasm_client.rs
client/src/render/: animation.rs  font.rs  isometric.rs  mod.rs  renderer.rs  shaders.rs
client/src/ui/: layout.rs  mod.rs  screens.rs  scroll.rs
client/web/: assets  auth.js  index.html  isometric-client.wasm  isometric_client.js  isometric_client.wasm  isometric_client_bg.wasm  loading.js  sapp_jsutils.js  title-screen.js  wallet.js
crates/aeven-protocol/: Cargo.toml
crates/aeven-protocol/src/: client_message.rs  lib.rs  wire.rs
crates/solstead-chain/: Cargo.toml
crates/solstead-chain/src/: config.rs  indexer.rs  lib.rs  pda.rs  withdraw.rs
launcher/: Cargo.toml  README.md  launcher-config.toml
launcher/src/: main.rs
rust-server/: Cargo.toml  PERFORMANCE_AUDIT.md  game.db-shm  game.db-wal  run-server.sh
rust-server/data/: chairs.toml  chest_spawns.toml  chests.toml  collection_log.toml  collision_ignore.toml  crafting_stations.toml  dig_sites.toml  farming_patch_locations.toml  farming_patches.toml  gathering_markers.toml  gathering_zones.toml  ground_spawns.toml  item_interactions.toml  loot_tables.toml  ore_types.toml  prayers.toml  pvp_zones.toml  quest_locations.toml  tree_types.toml  waystones.toml
rust-server/data/crate_loot/: artisan.toml  master.toml
rust-server/data/items/: bones.toml  consumables.toml  crates.toml  equipment.toml  equipment_accessories.toml  equipment_weapons.toml  materials.toml  seeds.toml  tools.toml
rust-server/data/orders/: alchemy.toml  cooking.toml  fishing.toml  fletching.toml  leatherworking.toml  mining.toml  smithing.toml  woodcutting.toml
rust-server/data/recipes/: alchemy.toml  consumables.toml  cooking.toml  fletching.toml  leatherworking.toml  materials.toml  smithing.toml  smithing_advanced.toml
rust-server/data/shops/: alchemist.toml  blacksmith.toml  fisherman_andy.toml  general_store.toml  jewel_shop.toml  lumberjack.toml  magic_shop.toml  miner.toml  range_shop.toml  seed_shop.toml  weapon_shop.toml  witch.toml
rust-server/data/slayer/: masters.toml  rewards.toml
rust-server/data/spells/: scroll_spells.toml
rust-server/docs/plans/: 2026-01-30-player-titles-design.md
rust-server/maps/interiors/: Desert_cave_fishing.json  Haunted_house.json  New_Aeven_Church.json  New_Aeven_blacksmith.json  New_Aeven_guard_house.json  New_Aeven_tailor.json  Newaeven_bank.json  Oakmere_Church.json  Oakmere_slayer_house.json  Oakshore_farm_house.json  Oakshore_magic_shop.json  Oakshore_reaper_Boss.json  Oakshore_reaper_chestroom.json  Spiderzone_questguy.json  barbarian_bank.json  blacksmith_shop.json  deep_desert_bank.json  deep_desert_range_shop.json  deep_desert_weapon_shop.json  desert_bank.json  desert_boss_cave.json  desert_house_1.json  desert_jewel_shop.json  desert_slayer_cave.json  desert_slayer_master.json  desert_tent_1.json  desert_tent_2.json  desert_tent_3.json  desert_witch_house.json  desert_wurm_arena.json  duel_arena.json  fight_pit.json  guildhouse.json  haunted_cabin.json  haunted_house_grave.json  king_of_the_hill.json  koth_arena.json  mazchna_house.json  na_cisterns.json  newaevenswordshop.json  (+26 more)
rust-server/maps/world_0/: chunk_-10_-1.json  chunk_-10_-10.json  chunk_-10_-2.json  chunk_-10_-3.json  chunk_-10_-4.json  chunk_-10_-5.json  chunk_-10_-6.json  chunk_-10_-7.json  chunk_-10_-8.json  chunk_-10_-9.json  chunk_-10_0.json  chunk_-10_10.json  chunk_-10_8.json  chunk_-10_9.json  chunk_-11_-1.json  chunk_-11_-10.json  chunk_-11_-2.json  chunk_-11_-3.json  chunk_-11_-4.json  chunk_-11_-5.json  chunk_-11_-6.json  chunk_-11_-7.json  chunk_-11_-8.json  chunk_-11_-9.json  chunk_-11_0.json  chunk_-11_10.json  chunk_-11_8.json  chunk_-11_9.json  chunk_-12_-1.json  chunk_-12_-10.json  chunk_-12_-2.json  (+410 more)
rust-server/migrations/: 0001_initial_schema.sql  0002_farming_overhaul.sql  0002_wallet_pubkey.sql  0003_chain_balance.sql  0004_grand_exchange.sql
rust-server/src/: admin_api.rs  app_state.rs  arena.rs  boss.rs  chain_api.rs  characters.rs  chest.rs  chunk.rs  client_messages.rs  collection_log.rs  config.rs  content.rs  db.rs  dig_site.rs  farming.rs  game.rs  gathering.rs  ground_spawn.rs  instance.rs  instances.rs  interior.rs  interior_registry.rs  item.rs  koth.rs  log_buffer.rs  logs.html  main.rs  matchmaking.rs  mining.rs  npc.rs  perf_metrics.rs  pharaoh_boss.rs  prayer.rs  protocol.rs  reaper_boss.rs  resource_contracts.rs  scroll_spell.rs  security.rs  server_auth.rs  skills.rs  (+8 more)
(+574 files in other folders)
