[package]
name = "new-aeven-client"
version = "4.5.1"
edition = "2021"
description = "Isometric MMORPG client"

[lints]
workspace = true

# For Android builds, we need a cdylib
# Desktop builds use the default binary
[lib]
name = "isometric_client"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "new-aeven"
path = "src/main.rs"

[dependencies]
aeven-protocol = { path = "../crates/aeven-protocol" }

# Game engine
macroquad = { version = "=0.4.14", features = ["audio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# MessagePack for Colyseus protocol
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }

# Logging
log = "0.4"

# Compression (deflate for StateSync decompression)
flate2 = "1.0"

# Native-only dependencies (non-WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
# HTTP client for matchmaking
ureq = { version = "2.10", features = ["json"] }
# WebSocket (uses wasm-bindgen on WASM which conflicts with miniquad)
ewebsock = { version = "0.6", features = ["tls"] }

# Desktop-only dependencies (not Android, not WASM)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dirs = "5.0"
image = { version = "0.24", default-features = false, features = ["png"] }
# Open external URLs (Discord/news links) in the system browser
open = "5"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-storage = "0.1"
sapp-jsutils = "0.1"
