[package]
name = "new-aeven-launcher"
version = "0.1.0"
edition = "2021"
description = "Desktop launcher for Isometric MMORPG"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
directories = "5.0"
