[package]
name = "isometric-server"
version = "0.1.1"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization (MessagePack for game protocol, JSON for HTTP)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Password hashing
argon2 = "0.5"

# Session token signing
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Configuration files
toml = "0.8"

# Scripting (Lua for quest system)
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }

# File watching (for hot-reload)
notify = "6"

[dev-dependencies]
tempfile = "3"
