[package]
name = "solstead-chain"
version = "0.1.0"
edition = "2021"
description = "Solstead devnet chain helpers — RPC, indexer, withdraw tickets"

[dependencies]
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
spl-associated-token-account = "6.0"
spl-token = "7.0"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
bincode = "1.3"
